[gd_scene load_steps=21 format=3 uid="uid://ckekd76gt61jg"]

[ext_resource type="Script" path="res://src/player.gd" id="1_qibaw"]
[ext_resource type="Texture2D" uid="uid://cqll3b462gr3y" path="res://assets/sprites/torso.png" id="2_cyyxl"]
[ext_resource type="Texture2D" uid="uid://co3gs7i3prm06" path="res://assets/sprites/spaceman_head.png" id="3_h01y5"]
[ext_resource type="Texture2D" uid="uid://r276nctjhhqg" path="res://assets/sprites/back_arm.png" id="4_gdxe3"]
[ext_resource type="Texture2D" uid="uid://bj03rtcnaylg8" path="res://assets/sprites/front_arm.png" id="5_1pwc8"]
[ext_resource type="PackedScene" uid="uid://cng0oxvq4lgro" path="res://pistol.tscn" id="6_3ubtt"]
[ext_resource type="Texture2D" uid="uid://ckj23t8cxbi3n" path="res://assets/sprites/spaceman_legs_idle.png" id="7_nifhg"]
[ext_resource type="Texture2D" uid="uid://b1i3pv3nxvo76" path="res://assets/sprites/spaceman_legs.png" id="7_yjm5e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jlrk2"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bgnwk"]
atlas = ExtResource("7_nifhg")
region = Rect2(0, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuk55"]
atlas = ExtResource("7_yjm5e")
region = Rect2(64, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl6kx"]
atlas = ExtResource("7_yjm5e")
region = Rect2(0, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_alkq0"]
atlas = ExtResource("7_yjm5e")
region = Rect2(32, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_44ome"]
atlas = ExtResource("7_yjm5e")
region = Rect2(64, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8yed"]
atlas = ExtResource("7_yjm5e")
region = Rect2(96, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_mex7a"]
atlas = ExtResource("7_yjm5e")
region = Rect2(128, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kh60"]
atlas = ExtResource("7_yjm5e")
region = Rect2(160, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_itjpr"]
atlas = ExtResource("7_yjm5e")
region = Rect2(192, 0, 32, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_frhlb"]
atlas = ExtResource("7_yjm5e")
region = Rect2(224, 0, 32, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_rf0e2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgnwk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuk55")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl6kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ome")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8yed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mex7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kh60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itjpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frhlb")
}],
"loop": true,
"name": &"running",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_qibaw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_jlrk2")

[node name="GroundChecker" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, 4)
hit_from_inside = true

[node name="GravityChecker" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, 10)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, -7)

[node name="Torso" type="Sprite2D" parent="Node2D"]
position = Vector2(0, -11)
texture = ExtResource("2_cyyxl")

[node name="Head" type="Sprite2D" parent="Node2D/Torso"]
position = Vector2(0, -7)
texture = ExtResource("3_h01y5")

[node name="Arm_B" type="Sprite2D" parent="Node2D/Torso"]
z_index = -1
position = Vector2(3, -3)
texture = ExtResource("4_gdxe3")
offset = Vector2(2.08165e-12, 2)

[node name="Arm_F" type="Sprite2D" parent="Node2D/Torso"]
z_index = 1
position = Vector2(-3, -2)
scale = Vector2(1, 1)
texture = ExtResource("5_1pwc8")
offset = Vector2(-1, 3)

[node name="WeaponHolder" type="Marker2D" parent="Node2D/Torso/Arm_F"]
position = Vector2(0.110936, 8.54328)
rotation = 1.5708

[node name="Pistol" parent="Node2D/Torso/Arm_F/WeaponHolder" instance=ExtResource("6_3ubtt")]

[node name="Legs" type="AnimatedSprite2D" parent="Node2D"]
z_index = -1
position = Vector2(2, 0)
sprite_frames = SubResource("SpriteFrames_rf0e2")
animation = &"running"
autoplay = "running"
frame_progress = 0.100838
speed_scale = 2.0
